code analytics fixes